Scala Common Enrich: allow but downcase a-f characters in incoming event_id (#1006)
Scala Common Enrich: extract useragent from ua parameter (#1011)
Scala Common Enrich: fixed issue where unset integer fields throw an NPE (#570) - TODO 
Scala Common Enrich: fixed issue where unset double fields throw an NPE (#1062)
Scala Hadoop Enrich: bumped to 0.8.0
Scala Hadoop Enrich: bumped Scala Common Enrich to 0.7.0 (#995)
Scala Hadoop Enrich: add test for empty integer and double fields to ensure no NPE thrown (#1063) - TODO

Version 0.9.8 (2014-09-18)
--------------------------
iOS Tracker: added git submodule. Version 0.1.1 (#982)
Android Tracker: added git submodule. Version 0.1.1 (#983)
Clojure Collector: bumped to 0.7.0
Clojure Collector: merged snowplow/tomcat-cf-access-log-valve into Snowplow as clojure-collector/access-valve (#898)
Clojure Collector: bumped access-valve to 0.1.0
Clojure Collector: changed access-valve's package path to com.snowplowanalytics.snowplow.collectors.clojure.accessvalve (#924)
Clojure Collector: changed access-valve to use Gradle (#899)
Clojure Collector: changed access-valve to publish to war-resources/.ebextensions (#900)
Clojure Collector: updated access-valve and added web.xml to log request body and content type (#901)
Clojure Collector: fixed empty querystring in access-valve (#938)
Clojure Collector: fixed IP address forwarding for VPC-based environments (#854)
Clojure Collector: added support for API vendor and version in routing (#925)
Clojure Collector: added support for POST as well as GET (#654)
Scala Stream Collector: fixed broken link to `thrift-raw-event`, thanks @bamos! (#955)
Scala Common Enrich: bumped to 0.6.0
Scala Common Enrich: split out Clojure and CloudFront Collector event processing (#943)
Scala Common Enrich: added CljTomcatLoaderSpec tests (#963)
Scala Common Enrich: filtering non-GETs from CloudfrontLoader (#944)
Scala Common Enrich: replaced all Argonaut code with json4s (#945)