@@ -17,9 +17,10 @@ Scala Common Enrich: allow but downcase a-f characters in incoming event_id (#10
 Scala Common Enrich: extract useragent from ua parameter (#1011)
 Scala Common Enrich: fixed issue where unset integer fields throw an NPE (#570) - TODO 
 Scala Common Enrich: fixed issue where unset double fields throw an NPE (#1062)
+Scala Common Enrich: added tests for ConversionUtils.stringToJInteger (#1064)
 Scala Hadoop Enrich: bumped to 0.8.0
 Scala Hadoop Enrich: bumped Scala Common Enrich to 0.7.0 (#995)
-Scala Hadoop Enrich: add test for empty integer and double fields to ensure no NPE thrown (#1063) - TODO
+Scala Hadoop Enrich: added test for empty integer and double fields to ensure no NPE thrown (#1063) - TODO
 
 Version 0.9.8 (2014-09-18)
 --------------------------
